Fixed navbar navigation on mobile

--- a/src/styles/bootsnav.css
+++ b/src/styles/bootsnav.css
@@ -1026,6 +1026,10 @@ body.on-side .wrap-sticky nav.navbar.bootsnav.sticked{
         display: none !important;
     }
     
+    nav.navbar.bootsnav .navbar-collapse.collapse.show {
+        display: block !important;
+    }
+    
     nav.navbar.bootsnav .navbar-collapse.collapse.in {
         display: block !important;
     }
