--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -98,6 +98,7 @@
     font-size: 28px;
     text-transform: uppercase;
     text-shadow: 1px 1px 2px #055B8D;
+    text-align: center;
 }
 
 .btn-primary {
